--- a/_posts/BOJ/2022-03-03-BOJ_S1_1149.md
+++ b/_posts/BOJ/2022-03-03-BOJ_S1_1149.md
@@ -18,75 +18,66 @@ import java.io.InputStreamReader;
 import java.util.StringTokenizer;
 
 public class Main {
-    static StringTokenizer st;
-    static int red = 0;
-    static int green = 1;
-    static int blue = 2;
+ 	static StringTokenizer st;
+	static int[][] arr;
+	static int[][] dp;
 
-    static int[][] cost;
-    static int[][] DP;
+	public static void main(String[] args) throws IOException {
+		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 
-    public static void main(String[] args) throws IOException {
-        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+		// 집의 수
+		int N = Integer.parseInt(br.readLine());
 
-        // 집의 수
-        int N = Integer.parseInt(br.readLine());
+		// 입력 값 저장 배열
+		arr = new int[N][3];
+		// 더한 값을 저장할 배열
+		dp = new int[N][3];
 
-        cost = new int[N][3];
-        DP = new int[N][3];
+		// 배열에 값 입력 ( 집 색깔 )
+		for (int i = 0; i < N; i++) {
+			st = new StringTokenizer(br.readLine(), " ");
+			for (int j = 0; j < 3; j++) {
+				arr[i][j] = Integer.parseInt(st.nextToken());
+			}
+		}
+		
+        // 초깃값 설정
+		dp[0][0] = arr[0][0];
+		dp[0][1] = arr[0][1];
+		dp[0][2] = arr[0][2];
 
-        red = 0;
-        green = 1;
-        blue = 2;
+        // 색 별로 각각의 최종값
+		long first = go(N - 1, 0);
+		long second = go(N - 1, 1);
+		long third = go(N - 1, 2);
 
+        // 최솟값 구하기
+		long res = Math.min(first, Math.min(second, third));
 
-        // 입력
+		System.out.println(res);
 
-        for (int i = 0; i < N; i++) {
-            st = new StringTokenizer(br.readLine(), " ");
-            for (int j = 0; j < 3; j++) {
-                cost[i][j] = Integer.parseInt(st.nextToken());
-            }
-        }
+	}
 
-        // 비용을 더해서 저장해준다
-        DP[0][red] = cost[0][red];
-        DP[0][green] = cost[0][green];
-        DP[0][blue] = cost[0][blue];
+    // dp 배열에 넣는 과정
+	static int go(int i, int j) {
 
+        // dp에 값이 없는 경우 if문안에 들어가고 dp에 값이 있는 경우 바로 가져온다 ( 메모이제이션 )
+		if (dp[i][j] == 0) {
+			if (j == 0) {
+				dp[i][j] = arr[i][j] + Math.min(go(i - 1, j + 1), go(i - 1, j + 2));
+			} else if (j == 1) {
+				dp[i][j] = arr[i][j] + Math.min(go(i - 1, j - 1), go(i - 1, j + 1));
+			} else {
+				dp[i][j] = arr[i][j] + Math.min(go(i - 1, j - 1), go(i - 1, j - 2));
+			}
+		}
 
-        System.out.println(Math.min(sum(N-1,red), Math.min(sum(N-1,green), sum(N-1,blue))));
-
-
-    }
-
-    // 합을 더해주는 과정
-    static int sum(int N, int color){
-
-        // 아직 비용이 저장되지 않은 곳
-        if(DP[N][color]==0){
-            // red라면 현재 N에서의 비용을 더하고 그 전 줄에서의 red를 제외한 값들 중 작은 값을 더 해준다. -> 반복
-            // 계속 타고타고 내려가면 0이 될 때 까지 내려가져서 실질적으론 그때부터 반대로 계산해서 올라와진다.
-            if(color == red){
-                DP[N][red] = cost[N][red] + Math.min(sum(N-1, green),sum(N-1,blue));
-            }
-            else if(color == green){
-                DP[N][green] = cost[N][green] + Math.min(sum(N-1,red) , sum(N-1,blue));
-            }
-            else if(color == blue){
-                DP[N][blue] = cost[N][blue] + Math.min(sum(N-1,red) , sum(N-1,green));
-            }
-        }
-
-        return DP[N][color];
-    }
+		return dp[i][j];
+	}
 }
 ```
 
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
-DP문제 이다.<br>
-처음에 DFS로 풀어야 되나 생각도 했지만 시간복잡도를 보아하니 DFS로 푸는 것은 아닌 것 같아서 DP로 풀어야 하는 것을 알아냈다.<br>
-확실히 DP문제들은 어떤식의 구조로 계산되는지 빨리 파악하지 못한다면 힘든 것 같다.<br>
-이 문제는 제일 마지막 위치에서 그 비용을 더하고 그 전 줄에서 기존에 더했던 색을 뺀 나머지 중에 더 작은 비용을 계속 더해 내려가는 것이다.<br>
-그러나 실질적으로는 처음 까지 내려갔다가 동선을 다 파악한 뒤 이제 0의 위치부터 값을 넣으며 계산해서 올라가는 것이다.<br>
-DP문제는 점화식이나 구조를 빨리 파악하는게 중요해서 여러 문제들을 풀어 생각하는 기술을 키워야겠다.
+그림을 그려서 보니 하향식 접근을 해야해서 DP문제라고 생각했다.<br>
+그래서 처음 값을 dp에 넣어주고 go 메서드를 통해 본인 열에 있는 값을 제외한 나머지 두 dp 값 중에 작은 것을 가져와 본인 값이랑 더해 dp 값을 구해주었다. ( go 메서드 설명 )<br>
+만약 dp 배열에 값이 있으면 바로 dp 값을 반환해주고 없으면 위에 말한 과정을 반복해주었다.
