--- a/_posts/BOJ/2022-03-30-BOJ_S3_15652.md
+++ b/_posts/BOJ/2022-03-30-BOJ_S3_15652.md
@@ -37,11 +37,11 @@ public class Main {
 		arr = new int[M + 1];
 		v = new boolean[N + 1];
 
-		go(0, 1);
+		comb(0, 1);
 		System.out.println(sb);
 	}
 
-	static void go(int idx, int start) {
+	static void comb(int idx, int start) {
 		// 기저조건
 		if (idx == M) {
 			for (int i = 0; i < M; i++) {
@@ -52,7 +52,7 @@ public class Main {
 		}
 		for (int i = start; i < N + 1; i++) {
 			arr[idx] = i;
-			go(idx + 1, i);
+			comb(idx + 1, i);
 		}
 	}
 }
@@ -60,6 +60,7 @@ public class Main {
 
 
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
-이 문제는 순서가 상관있는 문제이다. 순열 문제이다. nPm<br>
+이 문제는 순서가 상관없는 문제이다. 조합 문제이다. nPm<br>
 이 문제는 뽑는 수들이 같은 값일 때도 출력되기 때문에 그 경우를 잘 해결해야한다.<br>
-그 문제는 재귀로 값을 보내줄때 i에 +1을 하지 않고 시작을 본인부터 하게 했다.
+그 문제는 재귀로 값을 보내줄때 i에 +1을 하지 않고 시작을 본인부터 하게 했다.<br>
+조합 대한 자세한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
