--- a/_posts/TIL/2022-03-30-220330_TIL.md
+++ b/_posts/TIL/2022-03-30-220330_TIL.md
@@ -12,7 +12,7 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a> 
 - 알고리즘 문제 풀기 ( BOJ_15649, 15650, 15651, 15652, 15654, SWEA_3124)
-- MVD 모델 웹 ( list )
+- MVD 모델 웹 ( Read ( select ) )
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 오늘은 웹을 마무리하고 알고리즘을 다시 시작했다.<br>
