--- a/_posts/BOJ/2022-03-31-BOJ_S3_15655.md
+++ b/_posts/BOJ/2022-03-31-BOJ_S3_15655.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "BOJ_S3_15654"
+title:  "BOJ_S3_15655"
 categories: 
     - BOJ
 tags: 
@@ -9,7 +9,7 @@ sidebar:
     nav: "docs"
 ---
 
-# 📁 <b><a style="color:#00adb5" href="https://www.acmicpc.net/problem/15654" target=_blank>[S3_15654] N과M(5)</a></b>
+# 📁 <b><a style="color:#00adb5" href="https://www.acmicpc.net/problem/15655" target=_blank>[S3_15655] N과M(6)</a></b>
 
 ```java
 import java.io.BufferedReader;
@@ -23,35 +23,40 @@ public class Main {
 	static StringBuilder sb;
 	static int N,M;
 	static int[] arr;
-	static boolean[] v;
 	static int[] res;
+	static boolean[] v;
 	public static void main(String[] args) throws IOException{
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 		sb = new StringBuilder();
 		
-		st = new StringTokenizer(br.readLine(), " ");
+		st = new StringTokenizer(br.readLine()," ");
 		
 		N = Integer.parseInt(st.nextToken());
 		
 		M = Integer.parseInt(st.nextToken());
 		
 		arr = new int[N];
-		res=  new int[M];
-		v = new boolean[N];
 		
+		// 조합 구할때 사용할 배열
+		res = new int[M];
+		v = new boolean[N+1];
 		
-		st = new StringTokenizer(br.readLine(), " ");
+		// 배열 값 넣기
+		st = new StringTokenizer(br.readLine()," ");
 		for(int i=0; i<N; i++) {
 			arr[i] = Integer.parseInt(st.nextToken());
 		}
 		
+		// 정렬하기 
 		Arrays.sort(arr);
 		
-		perm(0);
+		comb(0,0);
 		System.out.println(sb);
 	}
 	
-	static void perm(int idx) {
+	// 순서가 상관없기 때문에 조합
+	static void comb(int idx, int start) {
+		// 기저조건
 		if(idx == M) {
 			for(int i=0; i<M; i++) {
 				sb.append(res[i]).append(" ");
@@ -60,24 +65,23 @@ public class Main {
 			return;
 		}
 		
-		for(int i=0; i<N; i++) {
+		for(int i=start; i<N; i++) {
 			if(v[i]) {
 				continue;
 			}
 			else {
-				v[i] =true;
+				v[i] = true;
 				res[idx] = arr[i];
-				perm(idx+1);
+				comb(idx+1, i+1);
 				v[i] = false;
 			}
-		}
+        }
 	}
 }
 ```
 
-
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
-이 문제는 순서가 상관 있는 배열을 뽑는 문제이다. nPr , 순열문제이다.<br>
-나열하는 값이 1,2,3,4 순이 아닌 직접 입력해서 그 값들을 출력해준다.<br>
-그래서 결과를 출력하는 배열에 arr 일력받은 값들을 넣어준다.<br>
-순열에 대한 자세한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
+이 문제는 순서가 상관없기 때문에 조합문제이다.<br>
+입력 받은 값들을 정렬시키고 조합 알고리즘 과정을 거쳐주면 된다.<br>
+순서가 상관없다는 의미는 (1,2) 가 (2,1) 이랑 같은 값을 의미한다는 뜻이다. 그래서 하나의 값만 출력해주면 된다.<br>
+조합에 대한 자세한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
