--- a/_posts/BOJ/2022-03-31-BOJ_S3_15656.md
+++ b/_posts/BOJ/2022-03-31-BOJ_S3_15656.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "BOJ_S3_15654"
+title:  "BOJ_S3_15656"
 categories: 
     - BOJ
 tags: 
@@ -9,7 +9,7 @@ sidebar:
     nav: "docs"
 ---
 
-# 📁 <b><a style="color:#00adb5" href="https://www.acmicpc.net/problem/15654" target=_blank>[S3_15654] N과M(5)</a></b>
+# 📁 <b><a style="color:#00adb5" href="https://www.acmicpc.net/problem/15656" target=_blank>[S3_15656] N과M(7)</a></b>
 
 ```java
 import java.io.BufferedReader;
@@ -23,28 +23,31 @@ public class Main {
 	static StringBuilder sb;
 	static int N,M;
 	static int[] arr;
-	static boolean[] v;
 	static int[] res;
+	static boolean[] v;
 	public static void main(String[] args) throws IOException{
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 		sb = new StringBuilder();
 		
-		st = new StringTokenizer(br.readLine(), " ");
+		st = new StringTokenizer(br.readLine()," ");
 		
 		N = Integer.parseInt(st.nextToken());
 		
 		M = Integer.parseInt(st.nextToken());
 		
 		arr = new int[N];
-		res=  new int[M];
-		v = new boolean[N];
 		
+		// 순열 구할때 사용할 배열
+		res = new int[M];
+		v = new boolean[N+1];
 		
-		st = new StringTokenizer(br.readLine(), " ");
+		// 배열 값 넣기
+		st = new StringTokenizer(br.readLine()," ");
 		for(int i=0; i<N; i++) {
 			arr[i] = Integer.parseInt(st.nextToken());
 		}
 		
+		// 정렬하기 
 		Arrays.sort(arr);
 		
 		perm(0);
@@ -52,6 +55,7 @@ public class Main {
 	}
 	
 	static void perm(int idx) {
+		// 기저조건
 		if(idx == M) {
 			for(int i=0; i<M; i++) {
 				sb.append(res[i]).append(" ");
@@ -61,23 +65,18 @@ public class Main {
 		}
 		
 		for(int i=0; i<N; i++) {
-			if(v[i]) {
-				continue;
-			}
-			else {
-				v[i] =true;
+				v[i] = true;
 				res[idx] = arr[i];
 				perm(idx+1);
 				v[i] = false;
-			}
 		}
 	}
 }
+
 ```
 
-
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
-이 문제는 순서가 상관 있는 배열을 뽑는 문제이다. nPr , 순열문제이다.<br>
-나열하는 값이 1,2,3,4 순이 아닌 직접 입력해서 그 값들을 출력해준다.<br>
-그래서 결과를 출력하는 배열에 arr 일력받은 값들을 넣어준다.<br>
+이 문제는 순서가 상관있기 때문에 순열 문제이다.<br>
+키 포인트는 자기자신도 출력하기 때문에 v 배열이 true 일때 생략하는 부분을 삭제했다.<br>
+원래 생략하는 부분이 있으면 (1, 1)이 안나오고 1, 다음값이 나오기 때문이다.<br>
 순열에 대한 자세한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
