--- a/_posts/TIL/2022-04-02-220402_TIL.md
+++ b/_posts/TIL/2022-04-02-220402_TIL.md
@@ -12,8 +12,8 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a> 
 - MVC 모델 제출 완료
-- DP 정리
-- 
+- DP 정리 ( 활용 부분 )
+- web backend 공부 & 정리
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 오늘 개인 할일을 하고 MVC 모델 웹 구현한 것을 캡쳐하고 정리해서 제출했다.<br>
