--- a/_posts/WEB/2022-03-23-WEB_JSP.md
+++ b/_posts/WEB/2022-03-23-WEB_JSP.md
@@ -19,7 +19,7 @@ sidebar:
 # 📚 <a style="color:#00adb5">JSP ( Java Server Page )</a>
 
 ## <a style="color:#00adb5">JSP</a> 란 무엇인가?
-자바 서버 페이지 ( JSP ) 는 <a style="color:red"><strong>HTML내에 자바 코드르 삽입하여 웹 서버에서 동적으로 웹 페이지를 생성하여 웹 브라우저에 돌려주는 언어</strong></a>이다.<br>
+자바 서버 페이지 ( JSP ) 는 <a style="color:red"><strong>HTML내에 자바 코드를 삽입하여 웹 서버에서 동적으로 웹 페이지를 생성하여 웹 브라우저에 돌려주는 언어</strong></a>이다.<br>
 Java EE 스펙 중 일부로 웹 애플리케이션 서버에서 동작한다.<br>
 자바 서버 페이지는 실행시에는 자바 서블릿으로 실행되므로 서블릿과 굉장히 유사하다고 볼 수 있다.<br>
 하지만 서블릿과는 달리 HTML 표준에 따라 작성되므로 웹 디자인하기에 편리하다.
@@ -40,7 +40,7 @@ Java EE 스펙 중 일부로 웹 애플리케이션 서버에서 동작한다.<b
 <br>
 
 1. jsp 파일 요청
-2. 해당 요청을 웹 컨테이너( Servlet 컨테이너 )에거 넘김
+2. 해당 요청을 웹 컨테이너( Servlet 컨테이너 )에게 넘김
 3. 기존에 요청된 JSP 파일인지 체크
  - 처음 요청 
     - Servlet java file 로 변환 ( 파싱 작업 )
@@ -50,7 +50,7 @@ Java EE 스펙 중 일부로 웹 애플리케이션 서버에서 동작한다.<b
     - 파싱 과정 생략하고 클래스 파일로 즉시 컴파일
 4. 메모리에 적재되어 실행
 5. 실행 결과를 웹 서버에 전달
-6. 전달반든 실행결과를 브라우저가 인식할 수 있는 HTML 파일로 바꾸어 브라우저에서 실행 ( 웹 서버 X )
+6. 전달받은 실행결과를 브라우저가 인식할 수 있는 HTML 파일로 바꾸어 브라우저에서 실행 ( 웹 서버 X )
 
 
 <br>
@@ -324,6 +324,24 @@ forward()에 비해 느림
 - 데이터 유지<br>
 request로는 data 저장 불가능<br>
 session이나 cookie를 이용
+
+
+<br>
+<hr>
+<strong>forward 와 redirect의 비교</strong><br>
+forward 는 <a style="color:red"><strong>사용자가 최초로 요청한 요청정보가 다음 URL에서도 유효</strong></a>하다.<br>
+redirect 는 <a style="color:red"><strong>최초의 request와 response 객체는 유효하지 않고 새롭게 생성</strong></a>된다.<br>
+이렇게 정의를 설명하면 이해가 잘 안 될 수도 있다.<br>
+그래서 가장 대표적인 예시를 들어보겠다.<br>
+한 게시판에 글쓰기 기능을 수행한다고 하자. 만약 forward를 사용하여 페이지를 부르면 다음과 같은 문제가 발생한다.<br>
+사용자가 실수로 글쓰기 페이지에서 새로고침을 누른다면 요청 정보가 계속 유효하기 때문에 요청이 여러번 전달 되어 동일한 게시글이 여러 번 등록될 수 있다.<br>
+그러나 redirect를 사용한다면 새로고침을 누르면 기존 요청 정보가 사라지기 때문에 문제가 발생하지 않는다.<br>
+그렇다고 모든 것에 redirect 를 사용하는 것은 아니다. <br>
+주로 시스템에 변화를 주지 않는 것은 forward, 변화를 주는 것은 redirect 를 사용한다.<br>
+forward 는 <a style="color:red"><strong>변화가 생기지 않는 단순 요청 ( 글 목록 보기, 검색 ) 등에 사용</strong></a>되고<br>
+redirect 는 <a style="color:red"><strong>변화가 생기는 요청 ( 회원가입, 글쓰기 ) 등에 사용</strong></a>된다.
+ 
+
 
 
 ## <a style="color:#00adb5">JSP</a> 마무리
