--- a/_posts/TIL/2022-04-06-220406_TIL.md
+++ b/_posts/TIL/2022-04-06-220406_TIL.md
@@ -12,7 +12,7 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a> 
 - 알고리즘 문제 풀기 & 정리
-- SWEA_5656, 3307, 2382, 5643
+- SWEA_3307, 2382
 - BOJ_2239, 2468
 - JO_2577 
 
