--- a/_posts/TIL/2022-04-08-220408_TIL.md
+++ b/_posts/TIL/2022-04-08-220408_TIL.md
@@ -11,6 +11,13 @@ sidebar:
 
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a> 
-- 
+- SWEA_5656, 2112 정리
+- 위상정렬 알고리즘 정리
+- BOJ_14889, 2644 문제풀기
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 알고리즘 문제를 풀기도 했지만 알고리즘 정리에 좀 신경을 썼다.<br>
+물론 푸는 것도 중요한데 개념을 잘 익히고 있는 것도 중요한 것같다.<br>
+솔직히 다양한 알고리즘을 접하고 있는 지금 약간씩 헷갈리고 기억이 잘 안나기도 한다.. ㅋㅋㅋ<br>
+조,순,부 는 이제는 좀 그래도 맘이 편한데 그래도 딱 딱 바로는 잘 안나온다.. 약간 생각을 해야되는.. ㅋㅋ 솔직히 조순부나 bfs,dfs는 자다가도 누르면 나와야한다고 생각하기 때문에 6월이나 7월에 정리하는 시즌을 한 번 가져야 겠다고 생각한다.<br>
+그리고 걱정이 웹도... ㅋㅋ 담주에 스프링 들어가는데 그때 부터 다시 빡세게,,ㅋㅋ 그래도 그전에 복습 한 번 하고 들어가야겠다 !! 화이팅 !!
