--- a/_posts/TIL/2022-04-08-220408_TIL.md
+++ b/_posts/TIL/2022-04-08-220408_TIL.md
@@ -11,6 +11,11 @@ sidebar:
 
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a> 
-- 
+- SWEA_5656, 2112 정리
+- BOJ_14889, 2644 풀기 
+- 위상정렬 알고리즘 정리
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘 하루종일 알고리즘을 했다. 알고리즘 문제 풀기 보단 정리에 집중했다.<br>
+문제를 많이 푸는 것도 중요한데 아직 못 푼 것들은 방법을 내 걸로 만드는 것도 중요하다 생각하기 때문이다.<br>
+그리고 수업을 마치고 바로 본가로 내려가서 오랜만에 풋살하고 푹 쉬었따... ㅎㅎ
