--- a/_posts/BOJ/2022-03-30-BOJ_S3_15652.md
+++ b/_posts/BOJ/2022-03-30-BOJ_S3_15652.md
@@ -63,4 +63,4 @@ public class Main {
 이 문제는 순서가 상관없는 문제이다. 조합 문제이다. nPm<br>
 이 문제는 뽑는 수들이 같은 값일 때도 출력되기 때문에 그 경우를 잘 해결해야한다.<br>
 그 문제는 재귀로 값을 보내줄때 i에 +1을 하지 않고 시작을 본인부터 하게 했다.<br>
-조합 대한 자세한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
+조합 대한 자세한 설명은 <a href="https://us13579.github.io/algorithm/ALGORITHM_Permutation_etc/" target=_blank>에 있다.<br>
