--- a/_posts/BOJ/2022-03-31-BOJ_S3_15655.md
+++ b/_posts/BOJ/2022-03-31-BOJ_S3_15655.md
@@ -84,4 +84,4 @@ public class Main {
 이 문제는 순서가 상관없기 때문에 조합문제이다.<br>
 입력 받은 값들을 정렬시키고 조합 알고리즘 과정을 거쳐주면 된다.<br>
 순서가 상관없다는 의미는 (1,2) 가 (2,1) 이랑 같은 값을 의미한다는 뜻이다. 그래서 하나의 값만 출력해주면 된다.<br>
-조합에 대한 자세한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
+조합에 대한 자세한 설명은 <a href="https://us13579.github.io/algorithm/ALGORITHM_Permutation_etc/" target=_blank>여기</a>에 있다.<br>
