--- a/_posts/TIL/2022-04-11-220411_TIL.md
+++ b/_posts/TIL/2022-04-11-220411_TIL.md
@@ -13,6 +13,13 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - SWEA_2383 정리
 - 프로그래밍과 논리, 수학 학습
-- SWEA_5607
+- SWEA_5607 ( 페르마 소정리 ) 제출, 정리
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 컴퓨팅 사고력에 대해서 공부하였다.<bR>
+명제나 최대공약수 최소공배수 , 유클리드 호제, 수와 표현, 소인수분해 , 페르마 소정리 등 여러가지를 빠른 시간에 배웠다.<br>
+사실 배웠다기 보다 한 번 훑었다? <br>
+우리반 담당 교수님도 이런 것을 알고 있으면 유용하지 꼭 달달 외울 필요는 없다고 하셔서 가볍게 들었다.<br>
+그리고 조합에 페르마 소정리를 이용한 문제를 풀었는데 확실히 엄청 큰 수를 구할 때는 점화식을 이용한 것이 유용하다는 생각이 들었다.<br>
+내일 까지 컴퓨팅 사고력인데 열심히 들어서 나의 뇌를 깨워야 겠다 !!<br>
+그리고 내일 A형 재시험이 있는데 통과는 못할 것 같지만 저번처럼 아무것도 못하고 나오는 일은 없도록 하자 !!
