--- a/_posts/BOJ/2022-03-30-BOJ_S3_15651.md
+++ b/_posts/BOJ/2022-03-30-BOJ_S3_15651.md
@@ -67,5 +67,5 @@ public class Main {
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제는 부분집합의 모든 경우를 구하는 문제이다.<br>
 그래서 int 배열과 boolean 배열을 이용해 재귀를 사용해 구해주었다.<br>
-부분집합의 모든 경우의 수에 대한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
+부분집합의 모든 경우의 수에 대한 설명은 <a href="https://us13579.github.io/algorithm/ALGORITHM_Permutation_etc/" target=_blank>여기</a>에 있다.<br>
 가장 기본적인 문제이다.
