--- a/_posts/BOJ/2022-03-30-BOJ_S3_15654.md
+++ b/_posts/BOJ/2022-03-30-BOJ_S3_15654.md
@@ -80,4 +80,4 @@ public class Main {
 이 문제는 순서가 상관 있는 배열을 뽑는 문제이다. nPr , 순열문제이다.<br>
 나열하는 값이 1,2,3,4 순이 아닌 직접 입력해서 그 값들을 출력해준다.<br>
 그래서 결과를 출력하는 배열에 arr 일력받은 값들을 넣어준다.<br>
-순열에 대한 자세한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
+순열에 대한 자세한 설명은 <a href="https://us13579.github.io/algorithm/ALGORITHM_Permutation_etc/" target=_blank>여기</a>에 있다.<br>
