--- a/_posts/BOJ/2022-03-31-BOJ_S3_15656.md
+++ b/_posts/BOJ/2022-03-31-BOJ_S3_15656.md
@@ -79,4 +79,4 @@ public class Main {
 이 문제는 순서가 상관있기 때문에 순열 문제이다.<br>
 키 포인트는 자기자신도 출력하기 때문에 v 배열이 true 일때 생략하는 부분을 삭제했다.<br>
 원래 생략하는 부분이 있으면 (1, 1)이 안나오고 1, 다음값이 나오기 때문이다.<br>
-순열에 대한 자세한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
+순열에 대한 자세한 설명은 <a href="https://us13579.github.io/algorithm/ALGORITHM_Permutation_etc/" target=_blank>여기</a>에 있다.<br>
