--- a/_posts/BOJ/2022-03-31-BOJ_S3_15657.md
+++ b/_posts/BOJ/2022-03-31-BOJ_S3_15657.md
@@ -76,4 +76,4 @@ public class Main {
 이 문제는 순서가 상관없기 때문에 조합문제이다.<br>
 이 문제의 키 포인트는 자기 자신을 포함하기 떄문에 원래 재귀를 돌릴때 (idx+1, i+1)를 주는데 i+1를 안주고 i를 준다.<br>
 그래서 본인보다 하나 더 큰 값부터 확인하는 것이 아니라 본인 값부터 확인을 한다.
-조합에 대한 자세한 설명은 <a href="./../ALGORITHM/2022-02-10-ALGORITHM_Permutation_etc.md">여기</a>에 있다.<br>
+조합에 대한 자세한 설명은 <a href="https://us13579.github.io/algorithm/ALGORITHM_Permutation_etc/" target=_blank>여기</a>에 있다.<br>
