--- a/_posts/TIL/2022-04-14-220414_TIL.md
+++ b/_posts/TIL/2022-04-14-220414_TIL.md
@@ -11,5 +11,14 @@ sidebar:
 
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
+- SPRING 공부
+- 정리, 복습
+
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘 처음으로 SPRING 을 배웠다.<br>
+다행히 MVC 모델의 개념을 잘 정립해놔서 그런지 ( 내딴엔 ) 그렇게 이해가 안되는 건 아니였다.<br>
+약간 그전에는 내가 연결하고 내가 다하는 느낌이였다면 spring 을 쓰니까 @ 하나로 다 연결되는 느낌이다.<br>
+아직은 첫 날이여서 뭐랄까 나중에는 안쓰이는 것도 하는데 ( 바껴지는 과정을 보기 위해 ) 그래도 그런 바뀌는 과정을 알고 있는 것이 더 학습하기 좋은 것을 싸피를 하면서 느꼈기 때문에 열심히 들었다 ㅎㅎ<br>
+그래도 어떤 기업들은 xml과 annotation이 같이 쓰이기 때문에 잘 배워두면 좋다!!<br>
+내일도 스프링 빡세게 하자 !!
