--- a/_posts/TIL/2022-04-19-220419_TIL.md
+++ b/_posts/TIL/2022-04-19-220419_TIL.md
@@ -12,6 +12,7 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - Spring MVC 학습 ( Controller, Model )
+- Spring FileUpload
 - Spring MVC 정리
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
