--- a/_posts/TIL/2022-04-19-220419_TIL.md
+++ b/_posts/TIL/2022-04-19-220419_TIL.md
@@ -16,3 +16,8 @@ sidebar:
 - Spring MVC 정리
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+... 스프링 참 어렵다... ㅋㅋㅋ 구조가 뭐이리 복잡한지..<br>
+사실 이틀만에 다 이해하는게 말이 안되긴 하지만 약간 web mvc 처음할 때 느낌? <br>
+계속적인 복습으로 따라가야할 것 같다 !!<br>
+정리도 복습을 위한 것이다 !! 화이팅 !!<br>
+내일은 알골도 한 문제 꼭 풀도록 하자 !
