--- a/_posts/TIL/2022-04-20-220420_TIL.md
+++ b/_posts/TIL/2022-04-20-220420_TIL.md
@@ -13,8 +13,16 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - Spring Interceptor 학습
 - Spring Interceptor 정리
-- Spring MVC 복습 ( 천천히 처음부터 따라가보기 - 새로운 파일 만들어서 )
-- BOJ_11725 - 정리
+- Spring MVC 복습 ( 천천히 처음부터 따라가보기 )
+- Spring Exception 처리 정리
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 Spring Interceptor을 학습하고 Spring MVC를 처음부터 차근차근 따라가 보았다.<br>
+interceptor의 정의와 수행 순서 등을 공부하고 은근 사용처가 많겠다는 생각이 들었다.<br>
+그리고 처음부터 mvc 패턴을 따라가보니 그래도 그전보다 좀 더 이해되는 느낌이다.<br>
+사실 아직도 MyBatis 나가고 다른거 더 배우면 코드가 더 바뀌겠지만 바뀌는게 없어지는게 아니라 자동으로 해주는 것이기 때문에 구조는 파악하고 있어야 한다.<br>
+그리고 복습하다가 Exception 처리를 정리해놓으면 좋을 것 같다는 생각에 정리를 했다. 만족스~<br>
+아쉽게 알고리즘은 또 풀지 못했다.. 후.. <br>
+내일..은 바쁠텐데..ㅋㅋㅋ 일단 시간을 보면서 하자<br>
+일단 Spring 이 우선이다 !!
