--- a/_posts/FRAMEWORK/2022-04-15-SPRING.md
+++ b/_posts/FRAMEWORK/2022-04-15-SPRING.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "SPRING"
 categories: 
-    - SPRING
+    - FRAMEWORK
 tags: 
     - [2022-04, WEB, SPRING, BACKEND, FRAMEWORK]
 sidebar:
