--- a/_posts/TIL/2022-04-21-220421_TIL.md
+++ b/_posts/TIL/2022-04-21-220421_TIL.md
@@ -12,8 +12,7 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - Mybatis (spring) 학습
-- Mybatis 정리
-- BOJ_11725 정리
+- Mybatis 실습
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
