--- a/_posts/TIL/2022-04-22-220422_TIL.md
+++ b/_posts/TIL/2022-04-22-220422_TIL.md
@@ -14,7 +14,11 @@ sidebar:
 - Spring 전체 복습
 - Mybatis 정리
 - Spring mybatis 설정 정리
-- BOJ_11725
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 전체 spring을 처음부터 여러 정보들을 복붙해가며 구조를 파악해가며 순서를 베워가는 시간을 가졌다.<br>
+확실히 복잡하기도 하고 시간도 오래걸렸다.<br>
+mybatis 정리도 했는데 확실히 유용한 framework이다.<br>
+특히 이것을 spring의 framework이다 라고 오해하는데 아니다. 별도의 persistence framework이다.<br> 아주 유용하다.<br>
+이때까지 배운 것들 슬슬 범위가 많아지는데 안 뒤쳐지게 주말간 많은 복습을 진행해야겠다!!
