--- a/_posts/FRAMEWORK/2022-04-22-MYBATIS.md
+++ b/_posts/FRAMEWORK/2022-04-22-MYBATIS.md
@@ -19,7 +19,8 @@ sidebar:
 # 📚 <a style="color:#00adb5">MYBATIS</a>
 
 ## <a style="color:#00adb5">MYBATIS</a> 란
-MyBatis는 <a style="color:red"><strong>Java Object ( DAO )와 SQL문 사이의 자동 Mapping 기능을 지원하는 Persistence Framework 이다. ( 지속성 프레임 워크 : 자료를 DB에 저장하는 과정을 도와주고 자동화하는 매개 SW) , SQL Mapper라고도 불린다. </strong></a><br><br>
+MyBatis는 <a style="color:red"><strong>Java Object ( DAO )와 SQL문 사이의 자동 Mapping 기능을 지원하는 Persistence Framework 이다. <br>
+( 지속성 프레임 워크 : 자료를 DB에 저장하는 과정을 도와주고 자동화하는 매개 SW) , SQL Mapper라고도 불린다. </strong></a><br><br>
 SQL문을 별도의 파일로 분리해서 관리한다.<br><br>
 Object (DAO) - SQL문 사이의 parameter mapping 작업을 자동으로 해준다.<br><br>
 MyBatis는 Hibernate나 JPA와 같은 새로운 DB 프로그래밍 패러다임을 익혀야 하는 부담 없이 *개발자가 익숙한 SQL을 그대로 이용하면서 JDBC 코드 작성의 불편함을 제거해주고 도메인 객체나 VO 객체를 중심으로 개발을 가능하게 해준다.*
@@ -156,13 +157,10 @@ PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-ma
 <br>
 
 다음은 *SqlSessionFactoryBuilder* 와 *SqlSessionFactory* 를 생성하는 코드이다.
-
 <br>
 
 위의 MyBatis 설정 파일을 읽어 *SqlSessionFactoryBuilder* 를 생성한 후 이것으로 *SqlSessionFactory* 를 생성하여 *SqlSession* 객체를 생성해 사용하고 있다.
-
-<br><br>
-
+<br>
 <strong>SqlMapConfig.java</strong>
 
 ```java
@@ -191,8 +189,7 @@ public class SqlMapConfig {
 
 <br>
 
-실제 SqlSession 메서드를 파라미터로 *mapper id* 와 *mapper 파라미터* 를 넘긴다.<br><br>
-
+실제 SqlSession 메서드를 파라미터로 *mapper id* 와 *mapper 파라미터* 를 넘긴다.<br>
 <strong>MemberDaoImpl.java</strong>
 
 ```java
@@ -221,12 +218,12 @@ public class MemberDaoImpl implements MemberDao {
 ```
 
 ## <a style="color:#00adb5">MyBatis - Spring</a> 란
-MyBatis-Spring은 <a style="color:red"><strong>MyBatis를 Spring Framework에 녹여내 좀 더 쉽게 사용하고자하는 연동 모듈</strong></a>이다.<br><br>
+MyBatis-Spring은 <a style="color:red"><strong>MyBatis를 Spring Framework에 녹여내 좀 더 쉽게 사용하고자하는 연동 모듈</strong></a>이다.<br>
 
 MyBatis-Spring에서는 *Spring Framework의 Bean* 으로 SqlSessionFactoryBean과 SqlSession을 등록한다.<br>
 *SqlSessionTemplate* 는 *SqlSession의 구현체* 이다.
 
-<br><br>
+<br>
 <strong>root-context.xml</strong>
 
 ```xml
