--- a/_posts/FRAMEWORK/2022-04-16-SPRING_DI.md
+++ b/_posts/FRAMEWORK/2022-04-16-SPRING_DI.md
@@ -133,3 +133,99 @@ servlet-context.xml
         <td>위의 Layer 구분을 적용하기 어려운 일반적인 경우에 설정</td>
     </tr>   
 </table>
+
+## <a style="color:#00adb5">Spring Bean의 생명 주기</a>
+
+<center>
+<img width="70%" src="./../../images/life.jpg">
+</center>
+<br>
+
+
+## <a style="color:#00adb5">DI ( Dependency Injection )</a>
+- 외부에서 두 객체 간의 관계를 결정해주는 디자인 패턴
+- <a style="color:red"><strong>인터페이스를 사이에 둬서 클래스 레벨에서는 의존관계가 고정되지 않도록 하고 런타임 시에는 관계를 다이나믹하게 주입</strong></a>
+- 유연성 확보
+- <a style="color:red"><strong>느슨한 결합 ( loose coupling )</strong></a> 의 주요 강점
+    - 객체는 인터페이스에 의한 의존 관계만을 알고 있으며, 이 의존 관계를 구현 클래스에 대한 차이를 모른채 서로 다른 구현으로 대체가 가능하다.
+- 객체 간의 의존관계를 자신이 아닌 *외부의 조립기가 수행*
+    - <a style="color:red"><strong>Spring Container</strong></a>가 DI 조립기를 제공
+        - Spring 설정 파일을 통하여 객체 간의 의존관계를 설정
+        - Spring Container가 제공하는 API를 이용해 객체를 사용
+
+## <a style="color:#00adb5">DI ( Dependency Injection )</a> spring 설정
+
+### <a style="color:#00adb5">Spring 설정 - xml</a>
+
+#### <a style="color:#00adb5">xml 문서 이용</a>
+- Application에서 사용할 Spring 자원들을 설정하는 파일
+- Spring Container는 설정파일에 설정된 내용을 읽어 Application에서 필요한 기능들을 제공
+- Root tag는 <beans>
+- 파일명은 상관 없다.
+
+<br>
+
+*applicationContext.xml*
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:context="http://www.springframework.org/schema/context"
+	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
+		http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-4.3.xsd">
+```
+
+#### <a style="color:#00adb5">기본 설정 - bean 객체 생성 및 주입</a>
+- 주입 할 객체를 설정 파일에 설정
+    - <bean> : 스프링 컨테이너가 관리할 Bean객체를 설정
+- 기본 속성
+    - name : 주입 받을 곳에서 호출 할 이름 설정
+    - id : 주입 받을 곳에서 호출 할 이름 설정 ( 유일 값 )
+    - class : 주입 할 객체의 클래스
+    - factory-method :  Singleton 패턴으로 작성된 객체의 factory 메서드 호출
+    - ref : 참조받을 클래스의 id명
+
+<br>
+
+*applicationContext.xml*
+
+```xml
+<bean id="memberDao" class="com.test.hello.dao.MemberDaoImpl" />
+
+<bean id="memberService" class="com.test.hello.service2.MemberServiceImpl" scope="prototype" >
+    <property name="memberDao" ref="memberDao" />
+</bean>
+```
+#### <a style="color:#00adb5">기본 설정 - bean 객체 얻기</a>
+- 설정 파일에 설정한 bean을 Container가 제공하는 주입기 역할의 api를 통해 주입 받는다.
+
+<br>
+
+*java file*
+
+```java
+ApplicationContext context = new ClassPathXmlApplicationContext("com/test/hello/controller4/applicationContext.xml");
+CommonService memberService = context.getBean("memberService", MemberService.class);
+CommonService adminService = context.getBean("adminService", AdminService.class);
+```
+
+### <a style="color:#00adb5">Spring 설정 - annotation</a>
+Annotation : 멤버변수에 직접 정의하는 경우 setter method를 만들지 않아도 됨<br>
+@Resource, @Autowired, @Inject가 있는데 <a style="color:red"><strong?>@Autowired</strong></a>를 주로 사용한다.<br>
+@Autowired는 Spring Framework에서 지원하는 Dependency 정의 용도의 Annotation으로, Spring Framework에 종속적이긴 하지만 정밀한 Dependency Injection이 필요한 경우에 유용하다.<br><br>
+
+사용법은 *생성자에 등록* 하고 동일한 타입의 bean이 여러 개일 경우에는 *@Qualifier("name")* 으로 식별한다.<br>
+
+```java
+public class MemberServiceImpl implements MemberService{
+
+    @Autowired
+    @Qualifier("mdao")   // 동일 타입이 여러개 일 경우
+    MemberDao memberDao;
+
+    ...
+}
+```
+
+
