--- a/_posts/TIL/2022-04-24-220424_TIL.md
+++ b/_posts/TIL/2022-04-24-220424_TIL.md
@@ -13,7 +13,12 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - Spring DI 정리
 - 컴퓨팅 사고력 복습
-- 
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 어제에 이어 Spring DI 부분을 마무리 정리하고 !<br>
+내일 시험 준비를 했다 !!<br>
+컴퓨팅 사고력 ( 카드게임, 배수, 함수 등 ) 에 대해 복습하고 ..<br>
+알골 문제도 풀었어야 했는데 ㅋㅋㅋ 하나도 안풀었다..<br>
+오늘부터 일찍자고 일찍 일어나자는 마인드로 자고 내일 5시 기상을 해볼 생각이다 !!<br>
+아침에 일어나서 알골 풀고 공부해야지 !! 화이팅 !
