--- a/_posts/FRAMEWORK/2022-04-16-SPRING_DI.md
+++ b/_posts/FRAMEWORK/2022-04-16-SPRING_DI.md
@@ -212,8 +212,8 @@ CommonService adminService = context.getBean("adminService", AdminService.class)
 
 ### <a style="color:#00adb5">Spring 설정 - annotation</a>
 Annotation : 멤버변수에 직접 정의하는 경우 setter method를 만들지 않아도 됨<br>
-@Resource, @Autowired, @Inject가 있는데 <a style="color:red"><strong?>@Autowired</strong></a>를 주로 사용한다.<br>
-@Autowired는 Spring Framework에서 지원하는 Dependency 정의 용도의 Annotation으로, Spring Framework에 종속적이긴 하지만 정밀한 Dependency Injection이 필요한 경우에 유용하다.<br><br>
+@Resource, @Autowired, @Inject가 있는데 <a style="color:red"><strong>@Autowired</strong></a>를 주로 사용한다.<br>
+*@Autowired*는 Spring Framework에서 지원하는 Dependency 정의 용도의 Annotation으로, Spring Framework에 종속적이긴 하지만 정밀한 Dependency Injection이 필요한 경우에 유용하다.<br><br>
 
 사용법은 *생성자에 등록* 하고 동일한 타입의 bean이 여러 개일 경우에는 *@Qualifier("name")* 으로 식별한다.<br>
 
