--- a/_posts/WEB/2022-04-22-MYBATIS.md
+++ b/_posts/WEB/2022-04-22-MYBATIS.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "MYBATIS"
 categories: 
-    - FRAMEWORK
+    - WEB
 tags: 
     - [2022-04, WEB, MYBATIS, BACKEND, FRAMEWORK]
 sidebar:
