--- a/_posts/WEB/2022-04-15-SPRING.md
+++ b/_posts/WEB/2022-04-15-SPRING.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "SPRING"
 categories: 
-    - FRAMEWORK
+    - WEB
 tags: 
     - [2022-04, WEB, SPRING, BACKEND, FRAMEWORK]
 sidebar:
