--- a/_posts/TIL/2022-04-25-220425_TIL.md
+++ b/_posts/TIL/2022-04-25-220425_TIL.md
@@ -11,8 +11,10 @@ sidebar:
 
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
-- REST API
-- 
+- REST API 학습
+- REST API 정리
+- swea_5515 풀기 & 정리
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 web에서 사용될 아키텍처인 rest api에 대해 배웠다.<br>
