--- a/_posts/WEB/2022-04-25-REST_API.md
+++ b/_posts/WEB/2022-04-25-REST_API.md
@@ -148,7 +148,7 @@ API는 컴퓨터나 컴퓨터 프로그램 사이의 연결이다. 다른 종류
         <td>GET</td>
         <td>/view.do?id=js&articleno=10</td>
         <td>GET</td>
-        <td>blog/js/10</td>
+        <td>/blog/js/10</td>
         <td>글읽기</td>
     </tr>
     <tr>
