--- a/_posts/TIL/2022-04-25-220425_TIL.md
+++ b/_posts/TIL/2022-04-25-220425_TIL.md
@@ -18,3 +18,8 @@ sidebar:
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 오늘은 web에서 사용될 아키텍처인 rest api에 대해 배웠다.<br>
+저번까지 Mybatis로 구현한 spring web에서 다는 아니지만 회원 관리 부분으로 관리자 페이지를 만들어 rest api를 활용해 보았는데 정말 너무 편리하다.<br>
+기존 데이터를 jsp로 view로 만들어서 반환하는 것을 그냥 data만 반환하는 걸 보고 코드도 간단해지고 view에 대해 신경을 쓸 필요가 없는게 너무 좋았다.<br>
+그리고 java에서 바로 json 객체를 사용해서 dto의 parameter로 매핑시켜주는 것도 너무 유용했다.<br>
+아직 다 배우진 못했지만 확실히 rest api를 많이 사용하는 이유를 조금이나마 느낄 수 있는 것 같다.<br>
+웹에서 뿐만 아니라 네이티브 앱을 만들때도 유용하게 사용 될 것 같아 2학기 때 프로젝트가 기대된다.<br>
