--- a/_posts/TIL/2022-04-25-220425_TIL.md
+++ b/_posts/TIL/2022-04-25-220425_TIL.md
@@ -13,7 +13,7 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - REST API 학습
 - REST API 정리
-- swea_5515 풀기 & 정리
+- SWEA_5515 풀기 & 정리
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
