--- a/_posts/WEB/2022-04-25-REST_API.md
+++ b/_posts/WEB/2022-04-25-REST_API.md
@@ -143,7 +143,7 @@ API는 컴퓨터나 컴퓨터 프로그램 사이의 연결이다. 다른 종류
         <td>설명</td>
     </tr>
     <tr>
-        <td><a style="color:red"><strong>RCreate ( Insert )</strong></a></td>
+        <td><a style="color:red"><strong>Create ( Insert )</strong></a></td>
         <td>POST</td>
         <td>/write.do?id=js</td>
         <td>POST</td>
@@ -151,7 +151,7 @@ API는 컴퓨터나 컴퓨터 프로그램 사이의 연결이다. 다른 종류
         <td>글쓰기</td>
     </tr>
     <tr>
-        <td><a style="color:red"><strong>RRead ( Select )</strong></a></td>
+        <td><a style="color:red"><strong>Read ( Select )</strong></a></td>
         <td>GET</td>
         <td>/view.do?id=js&articleno=10</td>
         <td>GET</td>
@@ -159,7 +159,7 @@ API는 컴퓨터나 컴퓨터 프로그램 사이의 연결이다. 다른 종류
         <td>글읽기</td>
     </tr>
     <tr>
-        <td><a style="color:red"><strong>RUpdate ( Update )</strong></a></td>
+        <td><a style="color:red"><strong>Update ( Update )</strong></a></td>
         <td>POST</td>
         <td>/modify.do?id=js</td>
         <td><a style="color:red"><strong>PUT</strong></a></td>
@@ -167,7 +167,7 @@ API는 컴퓨터나 컴퓨터 프로그램 사이의 연결이다. 다른 종류
         <td>글수정</td>
     </tr>
     <tr>
-        <td><a style="color:red"><strong>RDelete ( Delete )</strong></a></td>
+        <td><a style="color:red"><strong>Delete ( Delete )</strong></a></td>
         <td>GET</td>
         <td>/delete.do?id=js&articleno=10</td>
         <td><a style="color:red"><strong>DELETE</strong></a></td>
