--- a/_posts/TIL/2022-04-26-220426_TIL.md
+++ b/_posts/TIL/2022-04-26-220426_TIL.md
@@ -16,3 +16,13 @@ sidebar:
 - BOJ_14500
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 SpringBoot를 시작했다 !<br>
+오전에는 Rest API에서 @RestController를 써보면서 ResponseEntity를 사용해서 상태를 반환해주는 것을 해보았다.<br>
+현재 많이 쓰이는 것이라는데 잘 알고 있으면 좋을 것 같다.<br>
+일단 Rest 사용법에 대해서는 어느정도 익힌 기분이다. CRUD와 그 전 코드와 바뀐 부분 등등..<br>
+그리고 SpringBoot 찍먹 정도 해봤는데 확실히 더 편해졌다 ㅋㅋ<br>
+ssafy 과정은 바닥에서부터 점점 편해져가는 그 단계를 배우는 것 같다.<br>
+그러나 점점 초반 것들은 기억속에서... 다 그렇겠지..?<br>
+오랜만에 ajax, json, js 보는데 .. ㅋㅋㅋ 머리가 띵 ~ 저 때 블로그 정리도 안해서 뇌정지가 오더라.. 나중에 한 번 다시봐야할 것 같은데.. 담주 spring 모든 과정 시험치면 또 바쁘고 .. 후우 시간이 없다 읎어 ~~<br>
+오늘 일찍 일어나고 일찍 자는 2회차였는데 오전에 공부를 잘했던 것 같다.<br>
+하루가 확실히 길어졌따 ㅋㅋㅋ 내일도 화이팅 !!
