--- a/_posts/TIL/2022-04-27-220427_TIL.md
+++ b/_posts/TIL/2022-04-27-220427_TIL.md
@@ -11,6 +11,8 @@ sidebar:
 
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
-- 
+- springboot 복습
+- 동기, 비동기 통신 정리
+
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
