--- a/_posts/TIL/2022-04-27-220427_TIL.md
+++ b/_posts/TIL/2022-04-27-220427_TIL.md
@@ -13,6 +13,16 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - springboot 복습
 - 동기, 비동기 통신 정리
-
+- BOJ_1753 - fail
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 Spring 위주로 공부를 했다. <br>
+동기 비동기 처리를 공부하고 블로그에 이쁘게 정리해두었다. 다신 안까먹...진 않겠지만 기억에 깊이 남을 것 같다.<br>
+비록 jsp를 통한 공부였지만 큰 도움이 된 것같다.<br>
+그리고 오늘 교수님께 여쭤보니 너무 지식이 많이 들어와서 헷갈린다고 하니 차근차근 많이 쓰이는 것 위주로 처음부터 보라더라.<br>
+그래서 방향을 좀 틀기로 했다. 무조건 알골까지 같이 가져가면 좋지만 현재 내가 중요한 것은 spring이다.<br>
+왜냐하면 코테시험보다 더 일찍있는게 프로젝트이고 나는 내더라도 하반기 부터 낼 것이기 때문에 우선순위를 잘 두어야한다.<br>
+물론 두마리 토끼 둘다 잡으면 좋지만 현 상황은 좀 힘들다. 왜냐하면 spring의 양이 방대하고 쉽지만은 않기 때문이다.<br>
+그래서 생각한게 아침에 프로그래머스 문제 쉬운 것? 기초? 위주로 1문제 풀고 spring을 복습하는 것이다 !!<br>
+프로그래머스는 IDE를 안쓰기 때문에 좀 어색할거다. 그래서 그거 적응도 할 겸 기초를 다지고 본 게임은 spring 복습이다 !!<br>
+내일도 화이팅하자구 !
