--- a/_posts/TIL/2022-04-28-220428_TIL.md
+++ b/_posts/TIL/2022-04-28-220428_TIL.md
@@ -16,3 +16,14 @@ sidebar:
 - 프로그래머스_체육복
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 springboot 마지막 날이다.<br>
+마지막으로 한번 정리 싸악 하고 swagger 배우고 마무리가 되었다.<br>
+spring에서 springboot로는 설정이나 rest api 사용해서 restcontroller 구성하는 것등 크게 달라지는 것은 없었다.<br>
+그리고 xml을 안쓰고.. <br>
+이제 vue.js까지 배우고 나면 jsp도 아예 사라져서 이제 진정한 현업에서 사용하는 기술이 된다 !!<br>
+근데 사실 아직도 크게 문제가 되지 않아서 xml도 쓰고 jsp도 사용하고 있는 곳들도 많아서 모든 방법을 다 알고 있어야한다.<br>
+그게 ssafy의 장점이기도 하고.<br>
+그냥 spring만 배웠다면 이런 과정을 알면서 배웠을까? 그건 아니라고 본다.<br>
+그냥 바로 spring만 배워서 jsp가 어떻게 해서 어떻게 되었는지.. 뭐가 어떻게 변했는지 .. 그런게 나의 강점이 될 수있다.<br>
+결론은 뭐다? 잘 정리하고 잘 공부하자 !!<br>
+그리고 처음으로 ide 없이 프로그래머스에서 풀었는데 낫뱃인거 같다. 내일도 화이팅 !!
