--- a/_posts/TIL/2022-04-28-220428_TIL.md
+++ b/_posts/TIL/2022-04-28-220428_TIL.md
@@ -13,7 +13,7 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - swagger 학습
 - spring 복습
-- 프로그래머스_체육복
+- Programmers_체육복
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 오늘은 springboot 마지막 날이다.<br>
