--- a/_posts/TIL/2022-04-29-220429_TIL.md
+++ b/_posts/TIL/2022-04-29-220429_TIL.md
@@ -12,5 +12,14 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - Programmers_폰켓몬
+- spring 복습
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 spring 복습을 하고 programmers 문제를 하나 풀었다.<br>
+그리고 오늘은 ssafy에서 진행하는 ssafy meetup를 시청했다.<br>
+약 4~5시간 과정이였는데 너무 재밌었다.<br>
+김종국도 평소에 좋아했는데 김종국도 보고 심리학자 김경일 교수님의 강연을 들었다.<br>
+뭔가 심리치료에 대해 듣는데 와닿는 말이 많았다.<br>
+진짜 온라인으로 강연을 들으면서 다듣고 박수친적은 처음이다 ㅋㅋㅋ<br>
+나중에 한번 정리를 해보겠다 ㅎㅎ<br>
+오늘은 비록 공부를 많이 못했지만 주말에 열심히 하려는 발판이라 생각하겠다 !!
