--- a/_posts/TIL/2022-05-05-220505_TIL.md
+++ b/_posts/TIL/2022-05-05-220505_TIL.md
@@ -12,7 +12,7 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
 - Vue.js 정리
--
+- Programmers_2016 풀기 & 정리
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
