--- a/_posts/TIL/2022-05-05-220505_TIL.md
+++ b/_posts/TIL/2022-05-05-220505_TIL.md
@@ -16,3 +16,9 @@ sidebar:
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
+오늘 아주 기억에 남는 어린이 날이 되었다...<br>
+근처에 불이 나서 갑자기 약 2~3시간동안 정전이 났다.<br>
+그래서 부랴부랴 근처에 카페가서 공부를 했는데 생각보다 잘 된.. ㅋㅋ<br>
+화요일에 배운 Vue 를 복습했는데 정리하면서 공부가 잘 된 것 같다.<br>
+특징들도 이해하고.. 그리고 오랜만에 알고리즘을 풀었는데 그전 컴퓨팅 사고때 공부했던 요일 구하기를 해서 쉽게 풀어낼 수 있었다.<br>
+공휴일인데 그렇게 많이 공부를 못해서 아쉽다.. ㅠ
