--- a/_posts/TIL/2022-04-28-220428_TIL.md
+++ b/_posts/TIL/2022-04-28-220428_TIL.md
@@ -1,21 +1,22 @@
 ---
 layout: single
-title:  "2022.04.28.THU_TIL"
-categories: 
-    - TIL
-tags: 
-    - [2022-04, TIL]
+title: "2022.04.28.THU_TIL"
+categories:
+  - TIL
+tags:
+  - [2022-04, TIL]
 sidebar:
-    nav: "docs"
+  nav: "docs"
 ---
 
-
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
+
 - swagger 학습
 - spring 복습
-- Programmers_체육복
+- Programmers\_체육복
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
 오늘은 springboot 마지막 날이다.<br>
 마지막으로 한번 정리 싸악 하고 swagger 배우고 마무리가 되었다.<br>
 spring에서 springboot로는 설정이나 rest api 사용해서 restcontroller 구성하는 것등 크게 달라지는 것은 없었다.<br>
