--- a/_posts/TIL/2022-05-10-220510_TIL.md
+++ b/_posts/TIL/2022-05-10-220510_TIL.md
@@ -11,8 +11,18 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
-- Vue Component 정리
+- Vue Component, AXIOS 정리
 - Vue AXIOS, router 학습
 - Programmers\_더 맵게
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 axios, router를 배웠다. 교수님도 말씀하시길 하루만에 두개를 같이 배울 사이즈는 아니라는데..<br>
+ㅋㅋㅋ 진도가 바쁘다 보니 이런 구조가 나온다고 하신다. 그러나 마지막에 게시판을 가지고 완전 좋은 예제를 보여주셔서 그것을 잘 공부하면 큰 도움이 될 것 같다.<br>
+뭔가 진도가 빠르다 보니 이해할랑 말랑? 그러고 복습하면 띠용? 하는 느낌이다.. ㅋㅋㅋ <br>
+말이 좀 그렇지만 일단 복습을 많이 해야할 것 같다.. 근데 요즘 게을러져서 걱정이다..ㅠ<br>
+오늘은 수업 마치고 바로 코테 문제 한 문제 풀고.. 프로그래머스로 풀다보니 확실히 아직 좀 약하다.. 메서드를 자동완성 했었다 보니.. ㅋㅋ<br>
+자주 쓰는 것은 괜찮은데 잘 안썼던 것은 어려운 것 같다..<br>
+그리고 빨리 공부했어야 했는데 좀 오래 쉬어버렸다.. <br>
+내일은 !! 일찍 일어나서 공부하고 오후에도 쉬지말자 !!<br>
+그리고 내일 수업 마치고 컨설팅 있는데 잘 얘기해봐야 될 것 같다.
