--- a/_posts/TIL/2022-05-11-220511_TIL.md
+++ b/_posts/TIL/2022-05-11-220511_TIL.md
@@ -15,3 +15,12 @@ sidebar:
 - Vue AXIOS 정리
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 진도를 나가지 않고 기존에 했던 것들을 복습하며 부족한 부분들에 대해 강의를 들었다.<br>
+axios도 다 정리하고 component 통신에 대해서도 한 번더 복습을 하니 어느정도 감이 잡혔다.<br>
+확실히 개발은 직접 쳐봐야 기억에 잘 남는 것 같다. 물론 이러고 좀 있다가 까먹겠지만.. ㅋㅋ<br>
+자주자주 해야지 !<br>
+그리고 오늘 상담을 받았는데 확실히 내 마음이 정해졌다 !! 일단 코테 통과가 목표다 !!<br>
+자꾸 이런 저런 핑계로 소홀했는데 앞으로 최우선은 코테 통과다 ! 그래야 그 다음 것을 진행한다.<br>
+스터디도 다시 으쌰으쌰해서 시작한다. 월 금 으로 문제를 같이 풀기로 했는데 미리미리 연습해서 실력을 쌓도록 하자 !!<br>
+못한다고 부끄러워 할 시간에 한 문제라도 더 풀자 !!
