--- a/_posts/TIL/2022-05-12-220512_TIL.md
+++ b/_posts/TIL/2022-05-12-220512_TIL.md
@@ -16,3 +16,10 @@ sidebar:
 - 프로젝트 시작
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 Node.js와 함께 Vue/Cli 프로젝트를 생성하고 구현해보는 학습을 했다.<br>
+다른 서버 없이 js로만 웹 서비스를 구현할 수 있는 node.js를 써보니 확실히 js의 메리트가 높아지는 것 같긴 하다.<br>
+하나의 언어로 프론트와 백을 다 구현할 수 있는게 얼마나 대단한 것일까.. ㅎㅎ<br>
+그리고 이제 vuex만 배우면 웹 과정도 끝인데 내가 프로젝트에서 잘할 수 있을지 싶다.<br>
+뭔가 데이터를 옮기고 보내주고 하는 것이 어렵지 나머지는 크게 어려운 구조가 아니라 기존에 배웠던 것을 잘 따라하면 잘 할 수 있을 것이라 생각한다.<br>
+그리고 프로젝트 네비게이션바를 만들었는데 부트스트랩으로 만들다 보니 예쁜 것은 한계가 있는 것 같다. 그래도 간편하니 참 좋은 것 같다.
