--- a/_posts/PROGRAMMERS/2022-05-13-PROGRAMMERS_42587.md
+++ b/_posts/PROGRAMMERS/2022-05-13-PROGRAMMERS_42587.md
@@ -50,8 +50,8 @@ class Solution {
 
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 
-요즘 문제에 우선순위 큐가 많이 나오는 것 같다.
-이 문제는 내림차순 정렬이라 `Collections.reverseOrder()` 을 사용하는 것이 키 포인트고 Queue의 성질을 이용하는 것이 포인트이다.
+요즘 문제에 우선순위 큐가 많이 나오는 것 같다.<br>
+이 문제는 내림차순 정렬이라 `Collections.reverseOrder()` 을 사용하는 것이 키 포인트고 Queue의 성질을 이용하는 것이 포인트이다.<br>
 쉬운듯 쉽게 풀리지 않았따..ㅎ
 
 <br>
