--- a/_posts/TIL/2022-05-13-220513_TIL.md
+++ b/_posts/TIL/2022-05-13-220513_TIL.md
@@ -14,6 +14,13 @@ sidebar:
 - Vue/Cli & Node.js project 복습
 - Vue Router 정리
 - 프로젝트 게시판 UI 결정
-- 코테 준비
+- Programmers_42587 풀기
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 전체적으로 복습하는 날이였다.<br>
+Node.js를 이용한 Vue/Cli 게시판 프로젝트를 처음 부터 다시 다 훑어 보았고 그리고 전에 못했던 라우터 정리도 했다.<br>
+확실히 공부를 좀 하고 라우터 정리를 하니까 한 번더 이해되는 느낌이라 기분이 좋았다<br>
+점점 잡혀가는 것 같은데 이것도 계속 해줘야지 아니면 잘 까먹을 것 같다.. 사실 벌써 spring이... ㅋㅋㅋㅋㅋ<br>
+그리고 오늘 코테 문제하나 풀었는데 분명 쉬운건데... 하 웰케 오래 걸리는지 모르겠다.. 기본이 좀 부족한가 ㅠ<br>
+주말에 월욜 셤 준비, 프로젝트, 코테 공부 할게 많다 !! 화이팅 !!
