--- a/_posts/TIL/2022-05-13-220513_TIL.md
+++ b/_posts/TIL/2022-05-13-220513_TIL.md
@@ -15,6 +15,7 @@ sidebar:
 - Vue Router 정리
 - 프로젝트 게시판 UI 결정
 - Programmers_42587 풀기
+- Programmers_42746 풀기
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
