--- a/_posts/TIL/2022-05-15-220515_TIL.md
+++ b/_posts/TIL/2022-05-15-220515_TIL.md
@@ -17,3 +17,8 @@ sidebar:
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
+오늘은 오전에 프로젝트 글 목록 마크업을 완성하고 오후에는 Vue 공부를 했다.<br>
+블로그에 다 정리를 하고 다시 보는 거라 확실히 낯설지 않았다. 실습도 많이 했기 때문에..<br>
+근데 Vue/Cli 프로젝트를 하고 다시 앞으로 와서 하니까 조금 헷갈렸다..<br>
+Vue/Cli 프로젝트에서는 component를 다 따로 만들어서 SFA로 진행했는데 그전 Vue 프로젝트는 그렇게 진행을 하지 않아서 헷갈렸던 것 같다.<br>
+그래도 Vue에 대해서 좀 더 잘 알아가는 것 같아 다행이다.
