--- a/_posts/TIL/2022-05-15-220515_TIL.md
+++ b/_posts/TIL/2022-05-15-220515_TIL.md
@@ -12,7 +12,7 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
 - Vue Event 정리
-- Vue CSS,from 정리
+- Vue CSS, input form 정리
 - 프로젝트 글 목록 마크업 완료
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
