--- a/_posts/BOJ/2022-04-13-BOJ_S1_9205.md
+++ b/_posts/BOJ/2022-04-13-BOJ_S1_9205.md
@@ -1,15 +1,15 @@
 ---
 layout: single
-title:  "BOJ_S1_9205"
-categories: 
-    - BOJ
-tags: 
-    - [2022-04, CodingTest, BOJ, S1]
+title: "BOJ_S1_9205"
+categories:
+  - BOJ
+tags:
+  - [2022-04, CodingTest, BOJ, S1]
 sidebar:
-    nav: "docs"
+  nav: "docs"
 ---
 
-# 📁 <b><a style="color:#00adb5" href="https://www.acmicpc.net/problem/ç" target=_blank>[S1_9205] 맥주 마시면서 걸어가기</a></b>
+# 📁 <b><a style="color:#00adb5" href="https://www.acmicpc.net/problem/9205" target=_blank>[S1_9205] 맥주 마시면서 걸어가기</a></b>
 
 ```java
 import java.io.BufferedReader;
@@ -114,7 +114,8 @@ public class Main {
 ```
 
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
+
 처음에 문제를 잘못이해했다..<br>
 그냥 순서가 정해져있는줄 알았는데 그게 아니였다.. ㅋㅋㅋ 이미 문제를 일반적인 방법으로 다 풀고 틀리고 나서 깨달은 것 .. ㅋㅋ<br>
 그래서 보니 편의점 가는 순서가 상관 없는 것을 보고 bfs를 통해 구현했다.<br>
-주의할 점은 x,y 값을 통해 거리를 구해서 20*50은 1000이므로 1000보다 작으면 맥주를 먹을 수 있으므로 true이고 1000을 넘으면 맥주를 못 먹으므로 false이다.
+주의할 점은 x,y 값을 통해 거리를 구해서 20\*50은 1000이므로 1000보다 작으면 맥주를 먹을 수 있으므로 true이고 1000을 넘으면 맥주를 못 먹으므로 false이다.
