--- a/_posts/TIL/2022-05-31-220531_TIL.md
+++ b/_posts/TIL/2022-05-31-220531_TIL.md
@@ -16,3 +16,9 @@ sidebar:
 - BOJ_11660
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 오전에 알고리즘 문제 출제를 마무리하고 오후에는 강의를 들었다.<br>
+알고리즘 공부 강의를 들었는데 굉장히 유익한 강의였다. 3시간동안 시간가는줄 모르고 들었다. 고민되었던 부분도 해결이 되고 방향성도 잘 잡을 수 있게 도움을 받은 것 같다.<br>
+그리고 헬스장을 등록했다. 너무 오랫동안 운동을 안한 것 같아 도저히 이건 아니다 싶어 운동을 하기로 했다.<br>
+하루종일 앉아있고 그러다보니 몸도 뻣뻣해지고 ET몸매가 되어가는 것 같아 내일부터 공부에 방해되지 않는 선에서 열심히 운동을 할 생각이다.<br>
+원래 오늘 저녁에 정올 문제들을 풀려고 했는데 못 풀어서 내일은 하루종일 빡세게 코테 공부하는날 !! 화이팅이다.
