--- a/_posts/TIL/2022-06-03-220603_TIL.md
+++ b/_posts/TIL/2022-06-03-220603_TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "2022.06.02.THU_TIL"
+title: "2022.06.03.FRI_TIL"
 categories:
   - TIL
 tags:
@@ -16,3 +16,9 @@ sidebar:
 - 정올 문제풀기
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 알골 문제 위주로 풀었다.<br>
+2117 문제를 잘 푼 것 같으면서 답이 결국엔 안나와서 아쉬웠다..<br>
+오랜만에 이렇게 아쉬운 문제를 풀어본다. 뭔가 접근하고 다 잘 생각해낸거 같은데 구조는 맞는 것 같은데 방법이 약간 과했던 것 같다. 다른 사람들의 풀이를 보며 와우와우 한다.. ㅋㅋ<br>
+그래도 점점 이렇게 아깝게 되어가는거 보면 기분이 좋기도 하다 ㅎㅎ 이렇게 느는거겠지..?<br>
+내일은 정올을 최대한 많이 풀어보자 !
