--- a/_posts/TIL/2022-06-06-220606_TIL.md
+++ b/_posts/TIL/2022-06-06-220606_TIL.md
@@ -12,5 +12,10 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
 - Trip
+- 정올 함수2 풀기
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+여수에 2박3일 여행을 왔다. 이순신 장군 시장에 가서 맛있는 것도 먹고 물놀이도 하고 오랜만에 힐링을 했다.<br>
+저녁을 먹고 나서 그래도 정올 문제는 좀 풀어야 겠다고 생각해서 함수2 문제들을 풀었다. 약 한시간? 정도 걸렸던 것 같다. 문제수가 많아서.. ㅋㅋ <br>
+함수2를 풀면서는 버블정렬에 대해 한 번더 해보게되는 시간 이였다. 딱 보자마자.. ㅎㅎ 까먹었지만 다시 보고나서 스무스하게 짤 수 있게 되었다..ㅋㅋ 하아 내 기억력은 왜 이렇게 휘발성인 것 인가..<br>
+두 개씩 비교하며 정렬하고 꼭 n-1까지 !! 내일도 여행이지만 내일은 정올 함수3응 풀도록 하겠다 !!
