--- a/_posts/BOJ/2022-06-09-BOJ_G4_1197.md
+++ b/_posts/BOJ/2022-06-09-BOJ_G4_1197.md
@@ -68,7 +68,7 @@ public class Main {
         if(aRoot == bRoot) return false;
 
         // 짱끼리 합쳐야 한다
-      다 parents[bRoot] = aRoot;
+      parents[bRoot] = aRoot;
         return true;
     }
 
