--- a/_posts/TIL/2022-06-09-220609_TIL.md
+++ b/_posts/TIL/2022-06-09-220609_TIL.md
@@ -13,8 +13,12 @@ sidebar:
 
 - 정올 함수 3 다 풀기
 - BOJ_1197
+- MST 알고리즘 공부 ( 크루스 칼 )
+- UNION-FIND 알고리즘 공부
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 이제 모든 휴식 일정을 끝 마쳤다.. ㅎㅎ<br>
 좀 오랜기간 쉰 만큼 다시 달려야한다 !<br>
-오늘은 정올 함수 3 을 다 풀었다. 확실히 3까지가니까 좀 생각해야하는 부분이 있었다. 부분집합의 모든 경우의 수를 구하는 것이나 조합 등 여러 기초들을 다시 생각하게 되었다. 그래도 안 까먹은 것 같아 다행이다 ㅎㅎ
+오늘은 정올 함수 3 을 다 풀었다. 확실히 3까지가니까 좀 생각해야하는 부분이 있었다. 부분집합의 모든 경우의 수를 구하는 것이나 조합 등 여러 기초들을 다시 생각하게 되었다. 그래도 안 까먹은 것 같아 다행이다 ㅎㅎ<br>
+오랜만에 공부하니까 뭔가 더 의욕이 불탄다. 오늘 MST 강의를 새로 보면서 UNION-FIND 알고리즘과 크루스칼 알고리즘을 다시 봤는데 빨리 정리를 하고 싶어졌다.<br>
+내일 오전에 두개 알고리즘 정리를 하고 문제를 많이 풀어 봐야 겠다.
