--- a/_posts/TIL/2022-06-10-220610_TIL.md
+++ b/_posts/TIL/2022-06-10-220610_TIL.md
@@ -12,5 +12,12 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
 - 정올 반복제어문2 다 풀기
+- MST 정리 ( 크루스칼 알고리즘 )
+- BOJ_14500
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+정올 반복제어문2를 다 풀고 어제 공부했던 MST - 크루스칼 알고리즘을 이용해서 푸는 방법을 정리했다.<br>
+UNION-FIND 알고리즘이 비교적 간단해서 쉽게 이해할 수 있었다. 다음에 PRIM을 하려고 했는데 .. 머리에 과부화가 와서 강의만 한 번 듣고 정리는 미뤄두었다..ㅎㅎ<br>
+그래도 다익스트라 알고리즘이랑 굉장히 비슷하니까 프림 알고리즘을 정리하고 다익스트라 알고리즘도 같이 정리해야겠다.<br>
+그리고 스터디 문제를 풀고 스터디에서 기존에 풀었던 문제를 발표하는 시간을 가졌다.<br>
+내일 오랜만에 스터디원들과 문제를 하나 풀고 또 풀었던 문제를 발표할 시간을 가질 것 같다 !
