--- a/_posts/TIL/2022-06-14-220614_TIL.md
+++ b/_posts/TIL/2022-06-14-220614_TIL.md
@@ -25,4 +25,5 @@ DB에 관하여 공부를 했다. DB 설계, SQL 작성, csv로 이제 공공데
 그리고 오늘 싸피4기 졸업하신 프론트앤드 개발자 분이 나와서 강의를 해주셨는데 뭔가 점점 내가 어떤 개발자가 되고 싶은지 나타나 지는 것 같다. 지금 생각하기에 크게는 확실히 사용자에게 도움을 줄 수 있는, 현실 세계에서 도움이 되는 그런 개발을 하고 싶다. 아직 막연하지만 점점 프로젝트를 해가면서 나의 목표를 뚜렷이 해야겠다.<br>
 그리고 프로젝트하면서 겪는 경험들이나 여러 느낀점들을 빠르게 정리해야겠다. 최근에 했던 관통프로젝트 부터 차근차근 미리 정리 해두면 나중에 굉장히 편할 것 같다. <br>
 유투브 라이브를 통해 많은 것을 깨달은 것 같다. 내일도 집중해서 들어야 겠다 !<br>
-그리고 자기전에 코딩 1문제도 아주 만족 !
+그리고 자기전에 코딩 1문제도 아주 만족 !<br>
+그리고 내일부터 다시 !! 계획을 짜고 하루를 시작하도록 해야겠다 !!
