--- a/_posts/TIL/2022-06-17-220617_TIL.md
+++ b/_posts/TIL/2022-06-17-220617_TIL.md
@@ -17,3 +17,12 @@ sidebar:
 - BOJ_1992
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 계절학기 마지막 날..<br>
+그래서 이때동안 한 과제들 중에 하나를 정리해서 발표하는 시간을 가졌다.<br>
+난 docker 가 중요하다고 생각해서 docker 와 jenkins를 조금 공부해서 발표를 했다.<br>
+사실 블로그 적는 것과 비슷하게 적고 발표만 했다 ㅋㅋ<br>
+그리고 오늘 남은 선택 과제 2개나 했는데 아주 만족스.. 이제 springboot 이용해서 인스타 같은 거 하나만 만들면 과제 끝 !<br>
+그리고 백준 문제 하나 풀었다.<br>
+주말에 코딩문제도 풀고 프로젝트도 정리하고 공통 자소서도 쓰고 할게 많다..<br>
+이제 springboot 공부도 다시 좀 해야된다.. 프로젝트를 위해서 화이팅 !!
