--- a/_posts/TIL/2022-06-19-220619_TIL.md
+++ b/_posts/TIL/2022-06-19-220619_TIL.md
@@ -16,3 +16,10 @@ sidebar:
 - SpringBoot 이용해서 SNS 만들기 과제
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 공통자소서를 쓰는데 시간을 많이 사용했다.<br>
+사실 아직 취업도 준비가 안되어있고 ( 진짜.. ㅋㅋ ) 2학기 프로젝트에 집중하기 위해 자소서는 생각안하고 있으려고 했는데 3개의 기업에 필수로 내야해서 공통자소서를 작성했다. 근데 자소서를 작성하고 보니 이 블로그와 github 활동을 아주 잘했다고 생각이 든다. 쓸 말도 많고 나의 의지와 꾸준함을 시각적으로 보여줄 수 있어서 아주 좋았다 ㅎㅎ<br>
+아직은 다듬지 않고 급하게 냈지만 다음에 작성할 때는 천천히 정리해서 프로젝트도 잘 정리해서 낼 준비를 해야겠다.<br>
+그리고 다음주 내에 까먹지 않고 notion 했던 것들을 스샷 찍어놔야겠다 ㅎㅎ 부탁해서 ㅎㅎ<br>
+그리고 오늘은 시간이 얼마 없어서 백준 문제 쉬운 것을 풀고 씻고 나서 과제를 했다.<br>
+나의 새로운 목표는 매일 1문제씩 푸는 것이다. solved 잔디도 이쁘게 잘 심어보자구 !! 화이팅 !!
