--- a/_posts/TIL/2022-06-20-220620_TIL .md
+++ b/_posts/TIL/2022-06-20-220620_TIL .md
@@ -12,5 +12,19 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
 - BOJ_9375
+- BOJ_16234
+- 취업 특강
+- 리눅스 공부
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 하루종일 취업 관련 특강을 들었다.<br>
+확실히 취업 준비가 안되어있던 나에게는 큰 도움이 되는 강의였다.<br>
+서류 준비 나 면접 , 포트폴리오 등등 .. 사실 2학기때 내볼 생각이 없었지만 그래도 준비를 해서 좀 내보면서 코테를 치는게 나을 것 같다라는 생각이 들었다.<br>
+그런 경험도 나중에 도움이 될 것 같아서 ㅎㅎ<br>
+만간에 프로젝트도 다시 Notion에 잘 정리해서 포트폴리오화 해야겠다.<br>
+그리고 오늘 코딩문제를 2문제 풀었는데 하나는 혼자 하나는 스터디에서 풀었다. 오늘 스터디 문제를 맞추나했는데 아쉽게.. 실패.. 하나 경우를 고려하지 않았던 것 같다. 그래도 아쉬운 문제였다 ㅎㅎ<br>
+그리고 오늘 리눅스 공부도 했는데 확실히 윈도우 환경에서는 구문 자체가 달라져서 좀 고민이다. mac에서 공부를 할지 ..<br>
+일단 자기개발로 공부하는 것이기 때문에 너무 급하게는 생각 안하겠다. 그리고 내일부터는 대면강의 하는 것처럼 스케쥴을 해보려고 한다. 미리 적응해야지 안 피곤할 것 같아서?<br>
+사실 다니면서 운동이 되려나 싶어서 하는 거다.. ㅎㅎ 화이팅이다 ㅎㅎ<br>
+하루에 한문제 !! 잊지말고 하자 solved.ac 잔디도 푸르푸르하게 ^^
