--- a/_posts/TIL/2022-06-21-220621_TIL.md
+++ b/_posts/TIL/2022-06-21-220621_TIL.md
@@ -16,3 +16,9 @@ sidebar:
 - 취업 특강
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 오전에는 취업 특강 ( 산업정보, 기업 정보, 전형 등 ) 을 들었고 오후에는 CS 특강을 들었다.<br>
+CS 특강을 들으면서 느낀 것은 CS 지식은 기본으로 중요하지만 거기에 그 CS 지식에 따른 나의 경험을 말하는 것이 중요하겠구나 라는 생각을 했다. 결국 취준은 돌고돌아 나의 경험에서 내가 배운 것을 어떻게 활용했냐 이런 것들을 말하는 것 같다. 점점 틀이 잡히는 것 같다 ㅎㅎ<br>
+이제 나는 2학기 부터 더 많은 경험을 할텐데 그런 경험을 하면서 정리를 해놓는 것이 중요하다고 생각했다. 그냥 지나치는 것이 아니라 이럴때 이런경험을 해서 이렇게 해결했다. 이런 식으로 정리를 해놓으면 나중에 많은 도움이 될 것 같다 라는 생각을 했다.<br>
+그리고 1일1코딩 한 문제 풀어주고 ! 원래 스터디 문제도 풀려고 했는데 저녁에 기절하는 바람에 ㅜ<br>
+내일 부터 오전 운동에 spring 복습도 책으로 다시 시작하자 !!
