--- a/_posts/TIL/2022-06-26-220626_TIL.md
+++ b/_posts/TIL/2022-06-26-220626_TIL.md
@@ -13,5 +13,15 @@ sidebar:
 
 - 전주 여행 ( 할아버지 생신 )
 - BOJ_2108
+- 포트폴리오 Notion으로 작성할 정보 찾아보기
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘 전주에서 점심먹고 본집에 갔다가 구미에 왔다.<br>
+와서 청소 한 번 싸악 하고 1일 1코딩을 지켰다.<br>
+근데.. 근데 !!! 어제 분명히 한 문제를 solved 에서 풀었는데 잔디가 안 심어져있었다.. 너무 억울쓰..<br>
+잔디를 보며 흐뭇해 하는 난데 .. !!! 너무 슬프다.. 노트북으로 풀어서 그런지 뭔 시스템상에 오류가 있었던 건지.. solved에 잔디가 심어지지 않았다.<br>
+앞으로 풀고 나서 체크를 해봐야겠다.<br>
+그래도 내 실력은 늘고 있는 것 같으니 기분은 좋다 ㅎㅎ<br>
+내일 부터 다시 한 주동안 잡 페어 기간인데 얻어갈 것은 맛있게 얻어가자 !! 개인공부도 소홀히 하지말고<br>
+월 화 레이스 과제를 할 것 같은데.. 화이팅이다. 시간 낭비는 !! 절대 !! 없다 !!
