--- a/_posts/FRONTEND/2022-03-07-HTML_Img.md
+++ b/_posts/FRONTEND/2022-03-07-HTML_Img.md
@@ -1,12 +1,12 @@
 ---
 layout: single
-title:  "HTML_Img"
-categories: 
-    - HTML
-tags: 
-    - [2022-03, HTML, STUDY]
+title: "HTML_Img"
+categories:
+  - FRONTEND
+tags:
+  - [2022-03, HTML, FRONTEND, STUDY]
 sidebar:
-    nav: "docs"
+  nav: "docs"
 ---
 
 # 📚 <a style="color:#00adb5">HTML</a>
@@ -19,7 +19,9 @@ sidebar:
 # 📚 <a style="color:#00adb5">Img</a>
 
 ## <a style="color:#00adb5">HTML Img</a> 란 무엇인가?
+
 HTML &lt;img&gt; 는 <strong>이미지를 삽입하기 위해 사용</strong>된다.
+
 - <a style="color:red"><strong>src 속성</strong></a>은 이미지 경로를 지정하기 위해 사용 된다. ( 상대경로, URL 경로 다 가능 )
 - height, width 속성은 이미지 사이즈를 지정하기 위해 사용 된다.
 - alt 속성은 이미지를 표시할 수 없을 때 대체하는 텍스트를 지정합니다.
@@ -29,16 +31,20 @@ HTML &lt;img&gt; 는 <strong>이미지를 삽입하기 위해 사용</strong>된
 
 ```html
 <figure>
-    <img src="./../../images/orr.jpg" 
-        width="400" height="300"
-        alt="너무 이쁜 오로라네요.">
-        <figcaption>오로라가 참 이쁘네요.</figcaption>
+  <img
+    src="./../../images/orr.jpg"
+    width="400"
+    height="300"
+    alt="너무 이쁜 오로라네요."
+  />
+  <figcaption>오로라가 참 이쁘네요.</figcaption>
 </figure>
 ```
 
 <p align="center"><img src="./../../images/img.png" width="600"></p>
 
 ## <a style="color:#00adb5">HTML</a> Img 마무리
+
 지금 블로그 쓰면서도 자주 이용하고 있는 이미지를 삽입하는 태그이다.<br>
 어렵지 않고 많이 쓰다보니 벌써 외워졌을 정도다 ㅎㅎ<br>
 그리고 정렬은 &lt;p&gt; 를 이용해서 해주면 된다.<br>
